# airflow-tui

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt
src/tui/: app.py  main.py
src/tui/clients/: __init__.py  base.py  cli_client.py  registry.py
src/tui/models/: connection.py  dag.py
src/tui/widgets/: dag_management.py  main_content.py  navigation_tree.py  simple_navigation.py
