[project]
name = "airflow-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=4.0.0",
    "apache-airflow == 2.10.5",
    "apache-airflow-providers-postgres>=6.1.3",
    "apache-airflow-providers-ssh>=4.1.1",
    "textual-dev>=1.7.0",
    "polars>=1.31.0",
    "pandas>=2.3.1",
]
